--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 file.test=src/main/resources/japanLanguageWordTest.csv
+message.beginTest=Начинаем тестирование. За каждый правильный ответ получаете два балла
